test/compile_errors/err_opaque_alignof.w
//! expect-check-fail: alignof requires a type with known layout

type FILE = opaque

fn main:
    let _align = alignof[FILE]()
